WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146766
Videos on apple.com don't show up when restored from page cache.
https://bugs.webkit.org/show_bug.cgi?id=146766
Summary
Videos on apple.com don't show up when restored from page cache.
Andreas Kling
Reported
2015-07-08 17:44:46 PDT
<
rdar://problem/21712311
> Looks like page cache and media elements don't go that well together.
Attachments
Patch (no test)
(3.29 KB, patch)
2015-07-08 17:45 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Patch
(5.78 KB, patch)
2015-07-08 19:57 PDT
,
Andreas Kling
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-07-08 17:45:34 PDT
Created
attachment 256442
[details]
Patch (no test)
Andreas Kling
Comment 2
2015-07-08 19:57:27 PDT
Created
attachment 256454
[details]
Patch Now with layout test coverage.
Darin Adler
Comment 3
2015-07-08 20:07:22 PDT
Comment on
attachment 256454
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256454&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:4867 > + LOG(Media, "HTMLMediaElement::stopWithoutDeletingMediaPlayer(%p)", this);
Name here doesn’t match the actual function name above.
Andreas Kling
Comment 4
2015-07-08 20:29:28 PDT
Committed
r186569
: <
http://trac.webkit.org/changeset/186569
>
Chris Dumez
Comment 5
2015-07-09 09:28:38 PDT
Comment on
attachment 256454
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256454&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:4870 > exitFullscreen();
While this is a step in the right direction. I think there are still a few issues.
> Source/WebCore/html/HTMLMediaElement.cpp:4887 > m_asyncEventQueue.close();
This completely drops pending events (including the one that may have been queued by exitFullscreen() above. What we really want is to delay the event firing until after resume() is called, not drop the pending events.
Chris Dumez
Comment 6
2015-07-09 09:43:42 PDT
(In reply to
comment #5
)
> Comment on
attachment 256454
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=256454&action=review
> > > Source/WebCore/html/HTMLMediaElement.cpp:4870 > > exitFullscreen(); > > While this is a step in the right direction. I think there are still a few > issues. > > > Source/WebCore/html/HTMLMediaElement.cpp:4887 > > m_asyncEventQueue.close(); > > This completely drops pending events (including the one that may have been > queued by exitFullscreen() above. What we really want is to delay the event > firing until after resume() is called, not drop the pending events.
I mean delaying events is what we really want in the suspend() case. In the stop() case, dropping events like we currently do is fine.
Chris Dumez
Comment 7
2015-07-09 09:43:53 PDT
Comment on
attachment 256454
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256454&action=review
>> Source/WebCore/html/HTMLMediaElement.cpp:4887 >> m_asyncEventQueue.close(); > > This completely drops pending events (including the one that may have been queued by exitFullscreen() above. What we really want is to delay the event firing until after resume() is called, not drop the pending events.
The call to cancelPendingEventsAndCallbacks() above is also an issue (for the same reason).
Jer Noble
Comment 8
2015-07-15 09:04:15 PDT
We should make sure that HTMLMediaElement::setShouldBufferData(false) is called in this case, now that the MediaPlayerPrivate stays alive in the page cache.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug